syntax = "proto3";

package openk.health.v2;
option go_package = "github.com/neox5/openk/internal/api_gen/openk/health/v2;healthv2";

import "google/protobuf/timestamp.proto";

// Status represents system health status
enum Status {
 STATUS_UNSPECIFIED = 0;
 STATUS_OK = 1;
 STATUS_DEGRADED = 2; 
 STATUS_UNHEALTHY = 3;
}

// Subsystem represents component health status
message SubsystemStatus {
 string name = 1;
 Status status = 2;
 string message = 3;
 google.protobuf.Timestamp last_check = 4;
}

message CheckRequest {}

message CheckResponse {
 Status status = 1;
 google.protobuf.Timestamp timestamp = 2;
 string uptime = 3;
 string version = 4;
}

message SubsystemCheckRequest {}

message SubsystemCheckResponse { 
 Status overall_status = 1;
 repeated SubsystemStatus subsystems = 2;
 google.protobuf.Timestamp timestamp = 3;
}
